--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2021"
 strum = { version = "0.25.0", features = ["derive","strum_macros"] }
 hematite-nbt = "0.5.2"
 ndarray = "0.15.6"
-compress = {version="0.2.1", features = ["zlib"]}
+#compress = {version="0.2.1", features = ["zlib"]}
+#gzip = "0.1.2"
+flate2 = { version = "1.0.28", features = [] }
