--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,6 @@ edition = "2021"
 
 [dependencies]
 strum = { version = "0.25.0", features = ["derive","strum_macros"] }
-hematite-nbt = "0.5.2"
 ndarray = "0.15.6"
-#compress = {version="0.2.1", features = ["zlib"]}
-#gzip = "0.1.2"
+fastnbt = "2.4.4"
 flate2 = { version = "1.0.28", features = [] }
