--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ strum = { version = "0.25.0", features = ["derive","strum_macros"] }
 ndarray = "0.15.6"
 fastnbt = "2.4.4"
 flate2 = { version = "1.0.28", features = [] }
+libmath = "0.2.1"
