--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,11 @@ edition = "2021"
 
 # Example of customizing the library in Cargo.toml.
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["rlib", "cdylib"]
 bench = false
 
+[profile.release]
+panic = "abort"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
