--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2021"
 crate-type = ["rlib", "cdylib"]
 bench = false
 
+[[bin]]
+name = "schemtool"
+
 [profile.release]
 panic = "abort"
 
@@ -21,3 +24,4 @@ flate2 = { version = "1.0.28", features = [] }
 libmath = "0.2.1"
 rand = "0.8.5"
 static_assertions = "1.1.0"
+clap = { version = "4.4.18", features = ["derive"] }
