c ffi for schem loading
Signed-off-by: ToKiNoBug <tokinobug@163.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,6 +93,7 @@ endif ()
 if (MSVC)
     target_compile_options(mc_schem PUBLIC "/Zc:__cplusplus")
     target_compile_options(mc_schem PRIVATE "/std:clatest")
+    target_compile_options(mc_schem PRIVATE "/std:c17")
 else ()
     target_compile_features(mc_schem PUBLIC c_std_23)
 endif ()
