--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ libmath = "0.2.1"
 rand = "0.8.5"
 static_assertions = "1.1.0"
 clap = { version = "4.4.18", features = ["derive"] }
+chrono = "0.4.34"
