fix package meta info
Signed-off-by: ToKiNoBug <tokinobug@163.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ description = "A library to read, create, modify and write various Minecraft sch
 readme = "README.md"
 homepage = "https://github.com/SlopeCraft/mc_schem"
 repository = "https://github.com/SlopeCraft/mc_schem"
-license = "GPL-3"
+license = "GPL-3.0-or-later"
 license-file = "LICENSE"
 keywords = ["Minecraft"]
 categories = ["game-development"]
