fix package meta info
Signed-off-by: ToKiNoBug <tokinobug@163.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 homepage = "https://github.com/SlopeCraft/mc_schem"
 repository = "https://github.com/SlopeCraft/mc_schem"
 license = "GPL-3.0-or-later"
-license-file = "LICENSE"
+#license-file = "LICENSE"
 keywords = ["Minecraft"]
 categories = ["game-development"]
 include = ["/src", "/docs", "/c_sources", "/cmake", "/CMakeLists.txt"]
