--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,12 @@ license = "GPL-3.0-or-later"
 #license-file = "LICENSE"
 keywords = ["Minecraft"]
 categories = ["game-development"]
-include = ["/src", "/docs", "/c_sources", "/cmake", "/CMakeLists.txt"]
+include = ["/src", "/tests", "/docs", "/c_sources", "/cmake", "/CMakeLists.txt"]
 
 # Example of customizing the library in Cargo.toml.
 [lib]
 crate-type = ["rlib", "cdylib"]
 bench = false
-#path = "src"
 
 [[bin]]
 name = "schemtool"
