--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,3 +37,6 @@ rand = "0.8.5"
 static_assertions = "1.1.0"
 clap = { version = "4.4.18", features = ["derive"] }
 chrono = "0.4.34"
+sevenz-rust = "0.5.4"
+walkdir = "2.4.0"
+regex = "1.10.3"
